--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,8 +1,30 @@
 body {
   height: 100%;
-  width: auto;
+  overflow: hidden;
+  font-size: 12px;
+  color: #fff;
 }
 
-#testing {
-  font-size: 100px;
+#gamecontainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 525px;
+}
+
+#gamescreen {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#sky {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 80%;
+  background-image: url('../assets/sky.png');
+  background-repeat: repeat-x;
+  background-position: 0px 100%;
+  background-color: #4ec0ca;
 }
