--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -27,4 +27,7 @@ body {
   background-repeat: repeat-x;
   background-position: 0px 100%;
   background-color: #4ec0ca;
+
+ -webkit-animation: animSky 7s linear infinite;
+   animation: animSky 7s linear infinite;
 }
